Исправляет сетки крупных блоков главной

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,10 +24,11 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  width: 1200px;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
@@ -111,7 +112,6 @@ body {
 
 .main-hero {
   width: 1200px;
-  min-height: 485px;
   margin: 0 auto;
   background-color: #505050;
   background-image: url("../images/bg-index-vector.svg"), url("../images/bg-index.jpg");
@@ -128,8 +128,6 @@ body {
 }
 
 .description {
-  width: 1200px;
-  height: 282px;
   text-align: center;
 }
 
@@ -140,17 +138,11 @@ body {
 
 .features-list {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
   margin: 0;
   padding: 0;
+  flex-wrap: wrap;
   list-style: none;
   text-align: center;
-}
-
-.features-wrapper {
-  width: 230px;
-  margin-left: 85px;
 }
 
 .features-item  {
@@ -158,7 +150,7 @@ body {
 }
 
 .features-item-image {
-  width: 800px;
+
 }
 
 .features-item-lt-grey {
@@ -243,7 +235,6 @@ body {
 
 .newsletter {
   width: 1200px;
-  min-height: 415px;
   margin: 0 auto;
   text-align: center;
 }
@@ -293,7 +284,7 @@ body {
   display: flex;
   padding: 0;
   margin-left: 70px;
-  width: 142px;
+  min-width: 142px;
   list-style: none;
 }
 
@@ -322,7 +313,6 @@ body {
 
 .index-columns {
   width: 1200px;
-  min-height: 412px;
   margin: 0 auto;
   background-image: url("../images/bg-catalog.jpg");
   background-repeat: no-repeat;
