--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,11 @@ body {
   margin: 0 auto;
 }
 
+.navigation-logo {
+  width: 140px;
+  margin-right: 28px;
+}
+
 .navigation-link {
   font-size: 20px;
   line-height: 24px;
@@ -147,10 +152,6 @@ body {
 
 .features-item  {
   width: 400px;
-}
-
-.features-item-image {
-
 }
 
 .features-item-lt-grey {
