--- a/styles/styles.css
+++ b/styles/styles.css
@@ -237,6 +237,8 @@ body {
 .page-footer-container {
   display: flex;
   flex-direction: column;
+  width: 1200px;
+  margin: 0 auto;
 }
 
 .newsletter {
