--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,19 +46,23 @@ body {
 /* Основной стиль кнопок */
 
 .button {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 8px 0;
   font-family: inherit;
   font-size: 16px;
   line-height: 20px;
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
+  border-radius: 4px;
   color: #ffffff;
   background-color: #756157;
   border: none;
+  cursor: pointer;
 }
 
 /* Стили хедера и навигации */
-
 
 .navigation {
   display: flex;
@@ -84,7 +88,29 @@ body {
 }
 
 .navigation-link-white {
+  font-size: 16px;
+  line-height: 20px;
+  padding: 8px 34px;
+  margin: 14px 0;
   color: #ffffff;
+}
+
+.navigation-search {
+  background-image: url("../images/icons/header-search.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px 20px;
+  padding: 22px 12px;
+
+}
+
+.navigation-favorite {
+  background-image: url("../images/icons/header-heart.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 18px 17px;
+  padding: 22px 12px;
+  margin-right: 20px;
 }
 
 /* позиционирование блока навигации */
@@ -100,7 +126,7 @@ body {
 
 .navigation-user {
   max-width: 300px;
-  margin-left: auto;
+  margin-left: 42px;
 }
 
 .navigation-user .navigation-link {
@@ -223,11 +249,41 @@ body {
 }
 
 .features-item-icon-housing {
-  background-color: rgba(131, 179, 211, 0.12)
+  background-color: rgba(131, 179, 211, 0.12);
+  background-image: url("../images/icons/hero-housing.svg");
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: 80px;
+  background-size: 75px 72px;
+}
+
+.features-item-icon-housing .features-title,
+.features-item-icon-food .features-title,
+.features-item-icon-souvenir .features-title {
+  padding: 182px 82px 30px;
+}
+
+.features-item-icon-housing .features-description,
+.features-item-icon-food .features-description,
+.features-item-icon-souvenir .features-description {
+  padding-bottom: 81px;
+}
+
+.features-item-icon-food {
+  background-image: url("../images/icons/hero-food.svg");
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: 80px;
+  background-size: 74px 70px;
 }
 
 .features-item-icon-souvenir {
-  background-color: rgba(131, 179, 211, 0.12)
+  background-color: rgba(131, 179, 211, 0.12);
+  background-image: url("../images/icons/hero-souvenir.svg");
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: 80px;
+  background-size: 64px 76px;
 }
 
 .hotel-search {
@@ -256,6 +312,7 @@ body {
 .hotel-search-button {
   font-size: 20px;
   line-height: 36px;
+  padding: 8px 50px;
   text-transform: uppercase;
   text-decoration: none;
   color: #ffffff;
@@ -312,7 +369,9 @@ body {
 .newsletter-button {
   font-size: 20px;
   line-height: 36px;
+  padding: 8px 50px;
   background-color: #82B3D3;
+  border-radius: 0 4px 4px 0;
 }
 
 .footer-social {
@@ -335,6 +394,7 @@ body {
 .footer-social-item {
   width: 48px;
   height: 44px;
+  position: relative;
 }
 
 .footer-phone {
@@ -354,6 +414,16 @@ body {
   margin-right: 70px;
 }
 
+.footer-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  fill: #83B3D3;
+}
+
 /* каталог */
 
 /* внутренний хедер и фильтрация */
@@ -370,15 +440,19 @@ body {
 
 .header-inner-title {
   margin: 0;
-  padding-bottom: 8px;
+  padding: 0 70px 8px;
   font-size: 60px;
   line-height: 78px;
   font-weight: 700;
 }
 
+/* хлебные крошки */
+
 .breadcrumbs {
   display: flex;
   margin: 0;
+  margin-left: 70px;
+  margin-bottom: 40px;
   padding: 0;
   list-style-type: none;
 }
@@ -388,13 +462,39 @@ body {
   color: #ffffff;
 }
 
+.breadcrumbs-icon-home {
+  background-image: url("../images/icons/bc-home.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 12px 12px;
+  padding-left: 12px;
+}
+
+.breadcrumbs-item {
+  position: relative;
+  margin-right: 28px;
+}
+
+.breadcrumbs-item::after {
+  position: absolute;
+  content: url("../images/icons/bc-arrow.svg");
+  right: -15px;
+  width: 6px;
+  height: 10px;
+}
+
+.breadcrumbs-item:last-child::after {
+  content: none;
+}
+
 .catalog-filter-list {
   list-style-type: none;
 }
 
 .catalog-filter {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 70px;
 }
 
 .catalog-filter-group {
@@ -414,31 +514,51 @@ body {
   line-height: 23px;
 }
 
+.catalog-filter-button {
+  display: flex;
+  flex-direction: column;
+}
+
 .button-catalog-apply {
   font-size: 16px;
   line-height: 20px;
+  padding: 8px 50px;
+  margin-bottom: 36px;
   background-color: #82B3D3;
 }
 
 .button-catalog-reset {
+  padding: 8px 57px;
   background: none;
 }
 
 /* блок результатов поиска */
 
+.sorting-type {
+  margin-right: auto;
+}
+
+.catalog-hotel-bottom {
+  padding: 0 70px;
+}
+
 .hotel-display {
   display: flex;
-  padding: 50px 70px 40px;
+  padding: 50px 0 40px;
 }
 
 .hotel-display .button {
-  width: 44px;
-  height: 44px;
+  width: 48px;
+  height: 48px;
+  background-color: #ffffff;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
 }
 
 .hotel-count,
 .hotel-count-number {
   margin: 0;
+  margin-right: auto;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -451,6 +571,31 @@ body {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+
+.view-tile {
+  background-image: url("../images/icons/view-tile.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 16px 14px;
+}
+
+.view-slideshow {
+  background-image: url("../images/icons/view-slideshow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 16px 14px;
+}
+
+.view-list {
+  background-image: url("../images/icons/view-list.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 16px 14px;
+}
+
+.hotel-card-display-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .hotel-list {
@@ -466,64 +611,107 @@ body {
 .hotel-card {
   display: grid;
   grid-template-columns: 140px 140px;
-  grid-template-rows: 256px auto min-content min-content;
   gap: 16px 20px;
-  border: 1px solid #000000;
+  border: 1px solid #E6E6E6;
+  border-radius: 4px;
   padding: 20px;
 }
 
 .hotel-card-type {
   grid-column: 1 / 2;
-  grid-row: 2 / 3;
 }
 
 .hotel-card-price {
   justify-self: end;
   grid-column: 2 / 3;
-  grid-row: 2 / 3;
 }
 
 .button-about {
+  padding: 8px 26px;
   grid-column: 1 / 2;
-  grid-row: 3 / 4;
+}
+
+.hotel-card-image {
+  display: block;
 }
 
 .hotel-card-link {
-  display: grid;
-  grid-template-rows: 212px min-content;
+  grid-column: 1 / -1;
   color: #000000;
   text-decoration: none;
 }
 
-.hotel-card-image {
-  grid-row: 1 / 2;
-}
-
 .hotel-card-title {
-  grid-row: 2 / 3;
+  margin: 0;
+  margin-top: 16px;
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
 }
 
 .favorite {
+  padding: 8px 20px;
   grid-column: 2 / 3;
-  grid-row: 3 / 4;
   background-color: #82B3D3;
 }
 
 .hotel-card-stars {
   grid-column: 1 / 2;
-  grid-row: 4 / 5;
+}
+
+.hotel-card-stars-1 {
+  background-image: url("../images/icons/card-star.svg");
+  background-position: center;
+  background-size: 18px 18px;
+  background-repeat: space no-repeat;
+  padding: 10px 6px 10px 0;
+  width: 20px;
+}
+
+.hotel-card-stars-2 {
+  background-image: url("../images/icons/card-star.svg");
+  background-position: center;
+  background-size: 18px 18px;
+  background-repeat: space no-repeat;
+  padding: 10px 6px 10px 0;
+  width: 40px;
+}
+
+.hotel-card-stars-3 {
+  background-image: url("../images/icons/card-star.svg");
+  background-position: center;
+  background-size: 18px 18px;
+  background-repeat: space no-repeat;
+  padding: 10px 6px 10px 0;
+  width: 60px;
+}
+
+.hotel-card-stars-4 {
+  background-image: url("../images/icons/card-star.svg");
+  background-position: center;
+  background-size: 18px 18px;
+  background-repeat: space no-repeat;
+  padding: 10px 6px 10px 0;
+  width: 80px;
+}
+
+.hotel-card-stars-5 {
+  background-image: url("../images/icons/card-star.svg");
+  background-position: center;
+  background-size: 18px 18px;
+  background-repeat: space no-repeat;
+  padding: 10px 6px 10px 0;
+  width: 90px;
 }
 
 .favorite-added {
+  padding: 8px 18px;
   background-color: #7DB54F;
 }
 
 .rating {
+  padding: 8px 22px;
   grid-column: 2 / 3;
-  grid-row: 4 / 5;
   font-weight: 400;
   background-color: #F2F2F2;
   color: #333333;
@@ -532,7 +720,7 @@ body {
 .pagination {
   display: flex;
   padding: 0;
-  margin: 40px 70px 0;
+  margin: 40px 0 0;
   list-style-type: none;
 }
 
@@ -553,6 +741,7 @@ body {
   background-color: #82B3D3;
   color: #ffffff;
   text-decoration: none;
+  border-radius: 4px;
 }
 
 .pagination-current {
