--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,6 +81,10 @@ body {
 
 /* Стили хедера и навигации */
 
+.page-header {
+  position: relative;
+}
+
 .navigation {
   display: flex;
   width: 1200px;
@@ -89,9 +93,20 @@ body {
 }
 
 .navigation-logo {
+  position: absolute;
   margin-left: 70px;
   width: 140px;
   margin-right: 28px;
+}
+
+.navigation-logo:focus,
+.navigation-logo:hover {
+  transform: scale(1.05);
+  outline: none;
+}
+
+.navigation-logo:active {
+  transform: scale(1);
 }
 
 .navigation-link {
@@ -104,10 +119,24 @@ body {
   text-decoration: none;
 }
 
-.navigation-menu .navigation-link:hover,
-.navigation-menu .navigation-link:focus {
-  border-bottom: 2px solid #756257;
+.navigation-link:focus,
+.navigation-link:hover {
+  color: #756157;
   outline: none;
+}
+
+.navigation-link:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+.navigation-menu .navigation-link-current::after {
+  display: block;
+  margin: 0 auto;
+  transform: translateY(21px);
+  content: "";
+  width: 68px;
+  height: 2px;
+  background-color: #756257;
 }
 
 .navigation-link-white {
@@ -118,26 +147,32 @@ body {
   color: #ffffff;
 }
 
+.navigation-link-white:focus,
+.navigation-link-white:hover {
+  color: #ffffff;
+  background-color: #615048;
+}
+
+.navigation-link-white:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
 .navigation-search {
   background-image: url("../images/icons/header-search.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px 20px;
   padding: 22px 12px;
-
 }
 
 .navigation-favorite {
+  position: relative;
   background-image: url("../images/icons/header-heart.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 18px 17px;
   padding: 22px 12px;
   margin-right: 20px;
-}
-
-.navigation-item {
-  position: relative;
 }
 
 .navigation-favorite-circle {
@@ -159,6 +194,15 @@ body {
   color: #ffffff;
 }
 
+.navigation-link-scale:focus,
+.navigation-link-scale:hover {
+  transform: scale(1.2);
+}
+
+.navigation-link-scale:active {
+  transform: scale(1.1);
+}
+
 /* позиционирование блока навигации */
 
 .navigation-list {
@@ -166,6 +210,7 @@ body {
   flex-wrap: wrap;
   width: 600px;
   margin: 0;
+  margin-left: 234px;
   padding: 0;
   list-style-type: none;
 }
@@ -575,6 +620,12 @@ body {
 
 .breadcrumbs-link:hover {
   color: rgba(255, 255, 255, 0.6);
+  outline: none;
+}
+
+.breadcrumbs-link:focus {
+  color: #ffffff;
+  outline: none;
 }
 
 .breadcrumbs-link:active {
@@ -596,9 +647,11 @@ body {
 
 .breadcrumbs-item::after {
   position: absolute;
-  content: url("../images/icons/bc-arrow.svg");
-  right: -15px;
-  width: 6px;
+  content: "";
+  background-image: url("../images/icons/bc-arrow.svg");
+  margin-left: 11px;
+  top: 6px;
+  width: 7px;
   height: 10px;
 }
 
@@ -886,11 +939,6 @@ body {
   color: #333333;
 }
 
-.rating:focus,
-.rating:hover {
-  background-color: #d8d8d8;
-}
-
 .pagination {
   display: flex;
   padding: 0;
@@ -921,10 +969,8 @@ body {
 .pagination-link:focus,
 .pagination-link:hover {
   background-color: #68A2CA;;
-  border: 1px solid #82B3D3;
-  border-radius: 4px;
+  box-shadow: inset 0 0 0 1px #82B3D3;
   outline: none;
-  padding: 11px;
 }
 
 .pagination-link:active {
@@ -939,7 +985,7 @@ body {
 .pagination-current:focus,
 .pagination-current:hover,
 .pagination-current:active {
-  border: none;
+  box-shadow: none;
   color: #000000;
   background-color: #F2F2F2;
 }
@@ -952,7 +998,7 @@ body {
 .pagination-all:focus,
 .pagination-all:hover,
 .pagination-all:active {
-  border: none;
+  box-shadow: none;
   color: #000000;
   background: none;
 }
