--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ body {
 /* Основной стиль кнопок */
 
 .button {
-  display: inline-block;
+  display: block;
   box-sizing: border-box;
   padding: 8px 0;
   font-family: inherit;
@@ -549,7 +549,7 @@ body {
   color: #83B3D3;
 }
 
-.button:focus > .footer-icon {
+.footer-social-link:focus > .footer-icon {
   color: #68A2CA;
 }
 
@@ -557,7 +557,7 @@ body {
   color: #68A2CA;
 }
 
-.button:active > .footer-icon {
+.footer-social-link:active > .footer-icon {
   color: rgba(104, 162, 202, 0.3);
 }
 
